--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -34,7 +34,9 @@
                 </span>
               </p>
               <div class="flex justify-between items-center mb-2">
-                <span class="text-lg font-bold text-red-500">Rs<%= home.price %> / night</span>
+                <span class="text-lg font-bold text-red-500">
+                  <%= home.price %> / night
+                </span>
                 <div class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
                     class="w-5 h-5 text-yellow-400 mr-1" aria-hidden="true">
