--- a/views/host/edit-home.ejs
+++ b/views/host/edit-home.ejs
@@ -42,7 +42,7 @@
                bg-slate-900/40 text-slate-100 placeholder-slate-300
                focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500" />
 
-          <input type="file" name="photo" accept="image/jpg, image/jpeg, image/png" class="w-full px-4 py-2 mb-4 rounded-md border border-slate-500
+          <input type="file" name="images" accept="image/*" multiple class="w-full px-4 py-2 mb-4 rounded-md border border-slate-500
                bg-slate-900/40 text-slate-100
                file:mr-4 file:py-2 file:px-3 file:rounded-md
                file:border-0 file:bg-slate-700 file:text-slate-100
