--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -19,10 +19,14 @@
       </h2>
 
       <div class="flex flex-wrap justify-center gap-6">
-        <% registeredHomes.forEach(home=> { %>
+        <% registeredHomes.forEach(home=> {
+          const imgSrc = (home.images && home.images.length)
+          ? home.images[0] // first Cloudinary URL
+          : '/img/placeholder-house.jpg'; // fallback
+          %>
           <div
             class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition duration-300 w-full max-w-sm">
-            <img src="<%= home.photo %>" alt="<%= home.houseName %>" class="w-full h-48 object-cover">
+            <img src="<%= imgSrc %>" alt="<%= home.houseName %>" class="w-full h-48 object-cover">
             <div class="p-4">
               <h3 class="text-xl font-semibold text-gray-800 mb-2">
                 <%= home.houseName %>
@@ -34,9 +38,7 @@
                 </span>
               </p>
               <div class="flex justify-between items-center mb-2">
-                <span class="text-lg font-bold text-red-500">
-                  <%= home.price %> / night
-                </span>
+                <span class="text-lg font-bold text-red-500">Rs<%= home.price %> / night</span>
                 <div class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
                     class="w-5 h-5 text-yellow-400 mr-1" aria-hidden="true">
